--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ nav a {
     /* تعديل القسم الرئيسي ليشغل عرض الشاشة بالكامل */
     main {
         width: 100%;
-        margin-left: 0;
+        margin:30px 0px;
         padding: 20px;
         order: 3;
     }
