--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ nav a {
     /* تعديل القسم الرئيسي ليشغل عرض الشاشة بالكامل */
     main {
         width: 100%;
-        margin:30px 0px;
+        margin:50px 0px;
         padding: 20px;
         order: 3;
     }
@@ -206,6 +206,10 @@ nav a {
     /* تخصيص الروابط */
     nav a {
         padding: 10px;
+    }
+    h1{
+        width:90%;
+        higth:200px
     }
 }
 
